--- a/index.html
+++ b/index.html
@@ -58,39 +58,46 @@
 	</section><!--  End billboard  -->
 
 	<div class="feature dark">
-		<h2>Features</h2>
-		<h4>aTalk is an xmpp client designed for android and supports the following features:</h4>
-		<ul>
-			<li>Instant messaging in plain text and End-to-End encryption with <a href="http://conversations.im/omemo/">OMEMO</a>
+      <h2>Features</h2>
+      <h4>aTalk is an xmpp client designed for android and supports the following features:</h4>
+      <ul>
+      <li>Instant messaging in plain text and End-to-End encryption with <a href="http://conversations.im/omemo/">OMEMO</a>
 			  or <a href="https://otr.cypherpunks.ca/">OTR</a></li>
       <li><a href="./faq.html#account_03">SSL Certificate authentication, DNSSEC and DANE Security implementation</a> for enhanced secure Connection Establishment</li>
-			<li>Omemo encryption in multi-user-chat session, giving users' maximum privacy and security</li>
+      <li>OMEMO encryption in multi-user-chat session, giving users' maximum privacy and security</li>
       <li><a href="https://xmpp.org/extensions/inbox/omemo-media-sharing.html">OMEMO Media File Sharing for all files including Stickers, Bitmoji and Emoji rich contents</a></li>
       <li>Support <a href="https://xmpp.org/extensions/xep-0363.html">HTTP File Upload</a> for file sharing with offline contact and members in conference room</li>
       <li>Support downloadable <a href="./faq.html#feature_04">Stickers, Bitmoji and Emoji rich content sharing</a> via Google Gboard</li>
-			<li>Send and receive files for all document types and images, with thumbnail preview before file is sent </li>
+      <li>Send and receive files for all document types and images, with thumbnail preview before file is sent </li>
       <li>Auto accept file transfer request with max file size option</li>
       <li><a href="./faq.html#feature_05">Implement fault-tolerance file transfer to ease and enhance file sharing reliability (1-1 chat and chatRoom)</a></li>
       <li>Enhance and harmonize UI for file sharing in chat and chatRoom</li>
-      <li>Implement XEP-0048: Bookmarks for conference room and autoJoin on login</li>			  
-      <li>Implement XEP-0070: Verifying HTTP Requests via XMPP entity to confirm it made the request</li>
+	  <li>Support share, quote and forward of messages and media files with preview before sending</li>
+      <li>Support unread message badges in contact and chatRoom list views</li>
+      <li>XEP-0012: Last Activity to show the time of the last activity associated with a contact</li>
+      <li>XEP-0048: Bookmarks for conference room and autoJoin on login</li>			  
+      <li>XEP-0070: Verifying HTTP Requests via XMPP entity to confirm it made the request</li>
+	  <li>XEP-0071: Support send and receive of instant messages that contain lightweight text markup</li>
+	  <li>XEP-0085: Chat State Notifications</li>
+	  <li>XEP-0124: Bidirectional-streams Over Synchronous HTTP (BOSH) with Proxy support</li>
+      <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
       <li>Implement Jabber VoIP-PBX gateway Telephony, allowing PBX phone call via service gateway (experimental)</li>
       <li>Support <a href="./faq.html#feature_03">multi-user chat</a> in room creation, server chat rooms discovery and joining chat room with captcha protection</li>
-			<li>Support both voice and video call with <a href="./faq.html#media_05">ZRTP, SDES and DTLS SRTP encryption modes</a></li>
+      <li>Support both voice and video call with <a href="./faq.html#media_05">ZRTP, SDES and DTLS SRTP encryption modes</a></li>
       <li>Support <a href="./faq.html#media_02">simultaneous media call and message chat sessions</a></li>
-			<li>Unique <a href="./faq.html#feature_02">GPS-Location implementation</a>; Standalone tool, or sending locations to your chosen buddy for
+      <li>Unique <a href="./faq.html#feature_02">GPS-Location implementation</a>; Standalone tool, or sending locations to your chosen buddy for
 			  real-time tracking or playback animation.</li>
-			<li>A 360° street view of your current location, may use for self-guided tour. The street view tracks and
+      <li>A 360° street view of your current location, may use for self-guided tour. The street view tracks and
 			  follows your direction of sight.</li>
       <li>Built-in demo for GPS-Location features</li>
-			<li>Integrated photo editor with zooming and cropping, user can update the avatar with ease</li>
-			<li>Last message correction, message carbons and offline messages (OMEMO)</li>
-      <li><a href="./faq.html#feature_06">Stream Management and mobile network ping interval auto-tune optimization</a></li>
-      <li><a href="./faq.html#feature_05">In-Band Registration with captcha support</li>
-			<li>Multiple accounts creation</li>
-			<li>Multi-language UI support (Bahasa Indonesia, English, German, Russian, and Spanish).</li>
-			<li><a href="./faq.html">Online help support</a></li>
-		</ul>
+      <li>Integrated photo editor with zooming and cropping, user can update the avatar with ease</li>
+      <li>Last message correction, message carbons and offline messages (OMEMO)</li>
+      <li><a href="./faq.html#feature_06">Stream Management and mobile network ping interval self-tune optimization</a></li>
+      <li><a href="./faq.html#feature_05">In-Band Registration with captcha option support</li>
+      <li>Multiple accounts creation</li>
+      <li>Multi-language UI support (Bahasa Indonesia, English, German, Russian, and Spanish).</li>
+      <li><a href="./faq.html">Online help support</a></li>
+	</ul>
 	</div>
 	
 	<section class="blog_posts">
